--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ click-plugins==1.1.1
 cligj==0.5.0
 Fiona==1.8.13.post1
 Flask==1.1.1
+Flask-Cors==3.0.8
 Flask-Migrate==2.5.3
 Flask-SQLAlchemy==2.4.1
 folium==0.10.1
