--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "venv/bin/python3.6"
+    "python.pythonPath": "c:\\Users\\Yvel Marcelin\\Desktop\\covid19ht-ayitianalytics\\venv\\Scripts\\python.exe"
 }
