--- a/requirements.txt
+++ b/requirements.txt
@@ -7,12 +7,13 @@ chardet==3.0.4
 click==7.1.1
 click-plugins==1.1.1
 cligj==0.5.0
-Fiona==1.8.13.post1
+Fiona==1.8.13
 Flask==1.1.1
 Flask-Cors==3.0.8
 Flask-Migrate==2.5.3
 Flask-SQLAlchemy==2.4.1
 folium==0.10.1
+GDAL==3.0.4
 geopandas==0.7.0
 gunicorn==20.0.4
 idna==2.9
