--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,41 @@
-alembic==1.4.2
 attrs==19.3.0
 bokeh==2.0.1
-branca==0.4.0
-certifi==2019.11.28
+boto3==1.12.43
+botocore==1.15.43
+certifi==2020.4.5.1
 chardet==3.0.4
 click==7.1.1
 click-plugins==1.1.1
 cligj==0.5.0
-Fiona==1.8.13
-Flask==1.1.1
+docutils==0.15.2
+Fiona==1.8.13.post1
+Flask==1.1.2
 Flask-Cors==3.0.8
-Flask-Migrate==2.5.3
-Flask-SQLAlchemy==2.4.1
-folium==0.10.1
 geopandas==0.7.0
-gunicorn==20.0.4
 idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.1
-Mako==1.1.2
+jmespath==0.9.5
 MarkupSafe==1.1.1
 munch==2.5.0
 numpy==1.18.2
 packaging==20.3
 pandas==1.0.3
-Pillow==7.0.0
-psycopg2==2.8.4
-pyparsing==2.4.6
+Pillow==7.1.1
+psycopg2-binary==2.8.5
+pyparsing==2.4.7
+pyproj==2.6.0
 python-dateutil==2.8.1
-python-editor==1.0.4
+python-dotenv==0.12.0
 pytz==2019.3
 PyYAML==5.3.1
 requests==2.23.0
+s3transfer==0.3.3
+Shapely==1.7.0
 six==1.14.0
-SQLAlchemy==1.3.15
+SQLAlchemy==1.3.16
 tornado==6.0.4
-typing-extensions==3.7.4.1
-urllib3==1.25.8
-Werkzeug==0.16.1
+typing-extensions==3.7.4.2
+urllib3==1.25.9
+Werkzeug==1.0.1
 xlrd==1.2.0
